fixed scrollbar, added varcel.json

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -65,37 +65,52 @@
     color: black;
 }
 
-@media (max-width: 1015px){
-    .nav, .navOnScroll{
+@media (max-width: 1015px) {
+
+    .nav,
+    .navOnScroll {
         display: block;
     }
-    .navLinks ul{
+
+    .navLinks ul {
         justify-content: space-between;
         overflow-x: auto;
         padding: 10px 0px;
     }
-    .navLinks ul li{
+
+    .navLinks ul::-webkit-scrollbar {
+        display: none;
+    }
+
+    .navLinks ul li {
         padding: 3px 0px;
     }
-    .navTitle{
+
+    .navTitle {
         justify-content: center;
     }
 }
-@media (max-width: 700px){
-    .navLinks ul li{
+
+@media (max-width: 700px) {
+    .navLinks ul li {
         padding: 3px 0px;
         font-size: 20px;
     }
 }
-@media (max-width: 650px){
-    .nav, .navOnScroll{
+
+@media (max-width: 650px) {
+
+    .nav,
+    .navOnScroll {
         padding: 20px 30px 8px;
     }
-    .navLinks ul{
+
+    .navLinks ul {
         padding: 5px 0px;
         gap: 20px;
     }
-    .navLinks ul li{
+
+    .navLinks ul li {
         padding: 3px 0px;
         font-size: 18px;
     }
